src/test/deca/context/invalid/resultats/test2_multiple_decl-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test2_multiple_decl.ass introuvable
